move info label to avoid overlap with layer control

--- a/css/map.css
+++ b/css/map.css
@@ -86,8 +86,8 @@
 
 		.infolabel{
 			position:absolute;
-			top:80px;
-			right:40px;
+			top:80px;  /* 40px at corner */
+			right:100px;
 			width:300px;
 			height:110px;
 			z-index:10000;
